[package]
name = "bulletin"
version = "0.0.1"
description = "Templated Pinboard posts."
readme = "README.md"
authors = ["Jean Mertz <helloworld@rustic.games>"]
documentation = "https://docs.rs/bulletin"
homepage = "https://github.com/rustic-games/bulletin"
repository = "https://github.com/rustic-games/bulletin.git"
categories = ["command-line-utilities", "value-formatting"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
structopt = "0.2"
reqwest = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tera = "1.0.0-beta.3"
